<resources>
    <string name="app_name">BlankProject</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="MainActivityTitle">IInspireStudios</string>
    <string name="SignInButtonText">Sign In</string>
    <string name="emailLoginText">Email</string>
    <string name="emailPassWordText">PassWord</string>
    <string name="bottomMessageMainActivity">Be an Inspiration to those around you</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
</resources>
